--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2502,6 +2502,7 @@
   <string id="24001">Add-ons</string>
 
   <string id="24005">Plugin</string>
+  <string id="24006">PVR Client</string>
   <string id="24007">Scraper</string>
   <string id="24008">Screensaver</string>
   <string id="24009">Script</string>
