--- a/language/Chinese (Simple)/strings.xml
+++ b/language/Chinese (Simple)/strings.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <!--$Revision$-->
-<!--Based on english strings version 28467 -->
+<!--Based on english strings version 28883 -->
 <strings>
   <string id="0">程序</string>
   <string id="1">图片</string>
@@ -1711,6 +1711,7 @@
   <string id="20252">填入玻璃（视频）</string>
   <string id="20253">WebDAV服务器（HTTP）</string>
   <string id="20254">WebDAV服务器（HTTPS）</string>
+  <string id="20255">首次登录，编辑您的用户配置</string>
 
   <string id="20300">WEB服务器目录（HTTP）</string>
   <string id="20301">WEB服务器目录（HTTPS）</string>
