--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2229,6 +2229,7 @@
   <string id="34001">Vorbis</string>
   <string id="34002">Wav</string>
   <string id="34003">DXVA</string>
+  <string id="34004">VAAPI</string>
 
   <string id="34100">Speaker Configuration</string>
   <string id="34101">2.0</string>
