--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -730,6 +730,7 @@
   <string id="1048">- Username</string>
   <string id="1049">Script settings</string>
   <string id="1050">Singles</string>
+  <string id="1051">Enter web address</string>
 
   <string id="1200">SMB client</string>
   <string id="1202">Workgroup</string>
@@ -839,6 +840,7 @@
   <string id="10018">Settings - Network</string>
   <string id="10019">Settings - Appearance</string>
   <string id="10020">Scripts</string>
+  <string id="10021">Web Browser</string>
 
   <string id="10028">Videos/Playlist</string>
   <string id="10034">Settings - Profiles</string>
@@ -2623,6 +2625,7 @@
   <string id="34001">Vorbis</string>
   <string id="34002">Wav</string>
   <string id="34003">DXVA</string>
+  <string id="34004">VAAPI</string>
 
   <string id="34100">Speaker Configuration</string>
   <string id="34101">2.0</string>
