--- a/xbmc/pvrclients/MediaPortal/README
+++ b/xbmc/pvrclients/MediaPortal/README
@@ -2,6 +2,9 @@ XBMC MediaPortal TV-client ('MPTV') PVR Add-on
 ----------------------------------------------
 Supported platforms (pvrclient): Windows
 (Linux, OSX: work in progress)
+Dependencies:
+- MediaPortal TVServer 1.1.0 beta1 or higher
+- TVServerXBMC v1.0.7.0 or higher
 
 THIS IS A PRELIMINARY README AND IS SUBJECT TO CHANGE!!!
 
@@ -64,7 +67,7 @@ Detailed instructions:
    command should return a URL like "rtsp://xxx.xxx.xxx.xx/stream2.0" on a
    successful timeshift start. You can test this URL in VLC player. This should
    work before proceeding to the next steps.
-5. Test the rtsp stream in XBMC (just use the standard 9.11)
+5. Test the rtsp stream in XBMC (you can just use the standard 9.11)
    Create a playlist file "rtsp-stream.m3u" with the rtsp:// URL as content and
    start it from inside XBMC.
    Example contents rtsp-stream.m3u:
@@ -79,8 +82,65 @@ When this is all working fine, you can finally build XBMC-pvr-testing2:
 ----------------------------------------------
 MediaPortal PVR-addon settings:
 
-TODO:
-Explain the meaning of the settings here.
+Names are taken from addons/pvr/MediaPortal/settings.xml
+
+host: "Mediaportal Hostname"
+  IP-address of the machine that runs the TVServerXBMC tool
+  Default: 127.0.0.1 (localhost)
+port: "Mediaportal XBMC plugin Port"
+  Port number for the TVServerXBMC.
+  Default: 9596
+ftaonly: "Free-to-air only"
+  Fetch/show only Free-to-air channels from MediaPortal TV
+  Default: false
+useradio: "Include Radio"
+  Fetch also radio channels
+  Default: true
+convertchar: "Character Set Conversion"
+  Enable character conversion to UTF-8.
+  Does nothing. Not yet implemented.
+  Default: false
+timeout: "Connect timeout (s)"
+  Timeout on XBMC<->TVServerXBMC communication. After the selected timeout, 
+  XBMC won't wait any longer for an answer from TVServerXBMC and abort the 
+  selected action. Bottleneck is the timeshift start for TV channels. This 
+  can take a long time, so don't make this
+  value too small.
+  Default: 6
+tvgroup: "Import only TV Channels from group"
+  Allows you to fetch only the TV channels in a specific MediaPortal TVServer 
+  group. E.g. you can create a "XBMC" group at the TVServer side that contains
+  only the TV channels that you want to appear at the XBMC side. 
+  Default: <empty>
+radiogroup: "Import only Radio Channels from group"
+  Allows you to fetch only the radio channels in a specific MediaPortal TVServer 
+  group. E.g. you can create a "XBMC" group at the TVServer side that contains
+  only the radio channels that you want to appear at the XBMC side. 
+  Default: <empty>
+resolvertsphostname: "Convert hostname to IP-adress"
+  Resolve the TVServer hostname in the rtsp:// streaming URLs to an ip-address
+  at the TVServerXBMC side. May help you with connection problems.
+  Default: false
+readgenre: "EPG: Read genre strings (slow)"
+  Try to translate the EPG genre strings from MediaPortal into XBMC compatible
+  genre id's. However, depending on your EPG source, MediaPortal may return
+  strings in your local language. In this case, you can skip the genre
+  translation via readgenre=false.
+  The current implementation translates only English strings as workaround for
+  the mismatch between XBMC's genre ids and MediaPortals genre strings.
+  Default: false (= don't read and translate the genre strings)
+sleeponurl: "Wait after tuning a channel (ms)"
+  Adds an additional waiting time between the request to start a timeshift for
+  the selected channel and opening the rtsp:// stream in XBMC. You may need this
+  in case XBMC tries to open the returned rtsp:// stream before it is really
+  available. Typical symptom: the channel doesn't play the first time, but it
+  does play the second time.
+  Default: 0 (milliseconds)
+
+----------------------------------------------
+Troubleshooting:
+TODO...
+
 
 ----------------------------------------------
 Links:
