--- a/xbmc/pvrclients/vdr-vnsi/vdr-plugin-vnsiserver/README
+++ b/xbmc/pvrclients/vdr-vnsi/vdr-plugin-vnsiserver/README
@@ -13,3 +13,12 @@ the Free Software Foundation; either version 2 of the License, or
 See the file COPYING for more information.
 
 Description:
+
+
+CHANNEL SCANNING
+----------------
+For channel scan's a modified version of the wirbelscan plugin (Version dev-0.0.5-pre11e) is
+required. You can download the orginal source from here "http://wirbel.htpc-forum.de/wirbelscan/index2.html".
+
+The VNSI communicate with wirbelscan over VDR's plugin service interface, to add this feature
+you must patch wirbelscan with the file in "patches/vdr-wirbelscan-0.0.5-pre11e-AddServiceInterface.diff".
