--- a/language/German/strings.xml
+++ b/language/German/strings.xml
@@ -1807,6 +1807,8 @@
   <string id="19194">Fortfahren?</string>
   <string id="19195">Klientaktionen</string>
   <string id="19196">PVR Klient spezifische Aktionen</string>
+  <string id="19197">Aufnahme gestarted auf: %s</string>
+  <string id="19198">Aufnahme beendet auf: %s</string>
 
   <string id="19499">Andere/Unbekannt</string>
   <string id="19500">Movie/Drama</string>
