--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2531,12 +2531,13 @@
   <string id="24059">Would you like to enable this Add-on?</string>
   <string id="24060">Would you like to disable this Add-on?</string>
   <string id="24061">Addon-on update available!</string>
-  <string id="24062">Enabled Add-ons</string>
+  <string id="24062">Installed Add-ons</string>
   <string id="24063">Auto update</string>
   <string id="24064">Add-on enabled</string>
   <string id="24065">Add-on updated</string>
   <string id="24066">Cancel Add-on download?</string>
   <string id="24067">Currently downloading addons</string>
+  <string id="24068">Disabled System Add-on</string>
 
   <string id="24070">Add-on can not used</string>
   <string id="24071">An unknown error has occurred</string>
